--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,6 +1,6 @@
 .layoutBox {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   min-width: 1024px;
   min-height: 768px;
   position: fixed;
@@ -10,12 +10,3 @@
   justify-content: flex-start;
   align-items: flex-start;
 }
-
-.left {
-  width: 60px;
-  height: 100%;
-}
-
-.center {}
-
-.right {}
